<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
>
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.1.0</version>
    <relativePath/>
  </parent>

  <groupId>com.zfgc</groupId>
  <artifactId>zfgbb-parent</artifactId>
  <version>2025.9.1</version>
  <packaging>pom</packaging>

  <name>zfgbb-parent</name>
  <description>ZFGBB backend parent POM</description>

  <modules>
    <module>mbg-plugin</module>
    <module>model</module>
    <module>migrator</module>
    <module>app</module>
  </modules>

  <properties>
    <java.version>21</java.version>

    <m2e.apt.activation>jdt_apt</m2e.apt.activation>

    <mapstruct.version>1.7.0.Beta2</mapstruct.version>
    <lombok.version>1.18.46</lombok.version>
    <commons-lang3.version>3.20.0</commons-lang3.version>
    <guava.version>33.6.0-jre</guava.version>
    <mybatis-spring-boot.version>4.1.0</mybatis-spring-boot.version>
    <mybatis-generator.version>2.0.0</mybatis-generator.version>
    <mybatis-spring.version>4.1.0</mybatis-spring.version>
    <mybatis.version>3.5.19</mybatis.version>
    <mysql-connector.version>26.7.0</mysql-connector.version>
    <postgresql.version>42.7.13</postgresql.version>
    <flyway.version>13.1.0</flyway.version>
    <jsoup.version>1.23.1</jsoup.version>
    <commonmark.version>0.29.0</commonmark.version>
    <autolink.version>0.11.0</autolink.version>

    <testcontainers.version>2.0.5</testcontainers.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers-bom</artifactId>
        <version>${testcontainers.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>com.zfgc</groupId>
        <artifactId>zfgbb-mbg-plugin</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.zfgc</groupId>
        <artifactId>zfgbb-model</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.zfgc</groupId>
        <artifactId>zfgbb-migrator</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>org.mybatis.spring.boot</groupId>
        <artifactId>mybatis-spring-boot-starter</artifactId>
        <version>${mybatis-spring-boot.version}</version>
      </dependency>

      <dependency>
        <groupId>org.mybatis.generator</groupId>
        <artifactId>mybatis-generator-core</artifactId>
        <version>${mybatis-generator.version}</version>
      </dependency>

      <dependency>
        <groupId>org.mybatis</groupId>
        <artifactId>mybatis</artifactId>
        <version>${mybatis.version}</version>
      </dependency>

      <dependency>
        <groupId>org.mybatis</groupId>
        <artifactId>mybatis-spring</artifactId>
        <version>${mybatis-spring.version}</version>
      </dependency>

      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
        <version>${mapstruct.version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>

      <dependency>
        <groupId>org.flywaydb</groupId>
        <artifactId>flyway-database-postgresql</artifactId>
        <version>${flyway.version}</version>
      </dependency>

      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql.version}</version>
      </dependency>

      <dependency>
        <groupId>com.mysql</groupId>
        <artifactId>mysql-connector-j</artifactId>
        <version>${mysql-connector.version}</version>
      </dependency>

      <dependency>
        <groupId>org.jsoup</groupId>
        <artifactId>jsoup</artifactId>
        <version>${jsoup.version}</version>
      </dependency>

      <dependency>
        <groupId>org.commonmark</groupId>
        <artifactId>commonmark</artifactId>
        <version>${commonmark.version}</version>
      </dependency>

      <dependency>
        <groupId>org.nibor.autolink</groupId>
        <artifactId>autolink</artifactId>
        <version>${autolink.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <configuration>
            <skip>true</skip>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>properties-maven-plugin</artifactId>
          <version>1.3.0</version>
        </plugin>

        <plugin>
          <groupId>org.flywaydb</groupId>
          <artifactId>flyway-maven-plugin</artifactId>
          <version>${flyway.version}</version>
        </plugin>

        <plugin>
          <groupId>org.mybatis.generator</groupId>
          <artifactId>mybatis-generator-maven-plugin</artifactId>
          <version>${mybatis-generator.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <annotationProcessorPaths>
              <path>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
              </path>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-mapstruct-binding</artifactId>
                <version>0.2.0</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
